--- a/charts/helm-blue-green/templates/rbac.yaml
+++ b/charts/helm-blue-green/templates/rbac.yaml
@@ -20,7 +20,9 @@ rules:
 - apiGroups: [ "" ]
   resources: ["services","configmaps"]
   verbs: [ "get","list","update","create","delete" ]
-
+- apiGroups: [ "" ]
+  resources: ["endpoints"]
+  verbs: [ "get","list","update" ]
 - apiGroups: [ "" ]
   resources: ["pods"]
   verbs: [ "get","list","watch"]
