--- a/test/deploy/templates/deployment.yaml
+++ b/test/deploy/templates/deployment.yaml
@@ -44,6 +44,20 @@ spec:
   selector:
     app: http-echo
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: http-echo-canary
+  labels:
+    app: http-echo
+spec:
+  type: ClusterIP
+  ports:
+  - port: 5678
+    protocol: TCP
+  selector:
+    app: http-echo
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
