--- a/.golangci.yml
+++ b/.golangci.yml
@@ -8,6 +8,7 @@ linters:
   - varnamelen
   - gochecknoglobals
   - exhaustruct
-  - exhaustivestruct
   - musttag
   - depguard
+  - gomnd
+  - execinquery
