use MaxUnavailable in PDB
If user set both of MinAvailable and MaxUnavailable in PDP - it's a critical error, on validation step will use only MaxUnavailable value

Signed-off-by: Maksim Paskal <paskal.maksim@gmail.com>

--- a/pkg/config/testdata/test_config.yaml
+++ b/pkg/config/testdata/test_config.yaml
@@ -1,8 +1,15 @@
 name: testName
 
+pdb:
+  minAvailable: 1
+  maxUnavailable: 2
+
 deployments:
 - name: test01
 - name: test02
+  pdb:
+    minAvailable: 3
+    maxUnavailable: 0
 
 services:
 - name: test01
