Use templated annotations
Signed-off-by: Maksim Paskal <paskal.maksim@gmail.com>

--- a/charts/helm-blue-green/templates/job.yaml
+++ b/charts/helm-blue-green/templates/job.yaml
@@ -19,6 +19,9 @@ spec:
 {{ if .Values.annotations }}
 {{ toYaml .Values.annotations | indent 8 }}
 {{ end }}
+{{ if .Values.annotationsTemplated }}
+{{ tpl (toYaml .Values.annotationsTemplated) . | indent 8 }}
+{{ end }}
     spec:
       restartPolicy: {{ .Values.restartPolicy }}
       serviceAccountName: {{ include "helm-blue-green.fullname" . }}
