--- a/charts/helm-blue-green/values.yaml
+++ b/charts/helm-blue-green/values.yaml
@@ -10,6 +10,7 @@ image:
 priorityClassName: ""
 labels: {}
 annotations: {}
+annotationsTemplated: {}
 nodeSelector:
   kubernetes.io/os: linux
 affinity: []
